tests/overload-06/out.txt
error: no suitable overload found
  ┌─ err.sml:1:11
  │
1 │ val add = op+
  │           ^^^

typechecking failed
